login dari database

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,13 @@
 RewriteEngine on
 
+RewriteRule ^pengguna\.html$ template.php?module=pengguna&id=$1 [L]
+RewriteRule ^form_pengguna\.html$ template.php?module=form_pengguna&id=$1 [L]
+RewriteRule ^input_pengguna\.html$ template.php?module=input_pengguna&id=$1 [L]
+RewriteRule ^input\.php$ template.php?module=input&id=$1 [L]
+RewriteRule ^edit_pengguna-(.*)\.html$ template.php?module=edit_pengguna&id=$1 [L]
+RewriteRule ^update_pengguna\.html$ template.php?module=update_pengguna&id=$1 [L]
+RewriteRule ^hapus_pengguna-(.*)\.html$ template.php?module=hapus_pengguna&id=$1 [L]
+
 RewriteRule ^siswa\.html$ template.php?module=siswa&id=$1 [L]
 RewriteRule ^form_siswa\.html$ template.php?module=form_siswa&id=$1 [L]
 RewriteRule ^input_siswa\.html$ template.php?module=input_siswa&id=$1 [L]
