--- a/.htaccess
+++ b/.htaccess
@@ -24,4 +24,6 @@ RewriteRule ^setoran\.html$ template.php?module=setoran&id=$1 [L]
 RewriteRule ^input_setoran\.html$ template.php?module=input_setoran&id=$1 [L]
 RewriteRule ^detail-(.*)\.html$ template.php?module=detail&id=$1 [L]
 RewriteRule ^cetak-(.*)\.html$ template.php?module=cetak&id=$1 [L]
+
+RewriteRule ^beranda\.html$ template.php?module=beranda&id=$1 [L]
 Options All -Indexes
